# coronft

./: .gitignore  README.md  check_figure.py  circle.vtk  contour.txt  covid.mesh  covid.mesh.gmsh  generate_contour.py  leman.eps  out.vtk  pymesh_check.py
freefem_tests/: easy_mesh.edp  ffglut_0000.ppm  plot_circle.edp  points.edp  res  test_mest.edp  triangle_num.edp  triangulate_from_points.edp  xyf.txt
freefem_tests/isoline/: LemanLake.pgm  covid.mesh  covid.mesh.gmsh  lake.txt  launch_guide.md  leman.eps  leman_lake.edp
generator/: dots_remover.py
generator/dots_remover/: dots_remover.py
generator/letter_from_font/: a_from_font.py  generate_later_from_font.py
generator/letters/: generate_letter.py  generate_letter_a2.py  generate_letter_a2_triang.py  generate_letter_c.py  generate_letter_g.py  generate_letter_t.py
generator/letters/a/: letter_a_border(1).pgm  letter_a_border.pgm  letter_a_border_triang.pgm  letter_cords.mesh  letter_cords.mesh.gmsh
generator/letters/a2/: a2_border.pgm  letter_cords.mesh  (+2 more)
generator/map/: covid.mesh  covid.mesh.gmsh  dots_contour.txt  gen_covid.py  leman.eps
generator/map_tiles/: dots_inside.txt  gen_tiles.py
generator/map_tiles2/: CMakeCache.txt  CMakeLists.txt  DisplayImage  Makefile  cmake_install.cmake  gen_tiles.cpp  gl.h  letter_coords.txt  run.sh  util.h
generator/map_tiles2/coords/: coords.py
generator/test_letter_a/: dots3.txt  dots4.txt  dots_contour.txt  dots_inside.txt  test_letter.py
results/: covid.mesh.gmsh
site/coronft_web/: db.sqlite3  manage.py
site/test/: test_folium_and_flask.py
(+56 files in other folders)
